overlays/local/kafka-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kafka
  name: kafka-ui
spec:
  selector:
    matchLabels:
      app: kafka-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: kafka-ui
    spec:
      containers:
      - name: kafka-ui
        image: provectuslabs/kafka-ui:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 100m
            memory: 1024Mi
        ports:
          - name: http
            containerPort: 8080
