overlays/local/kafka-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui-ingress
  namespace: kafka
spec:
  ingressClassName: nginx
  rules:
  - host: kafka.local
    http:
      paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: kafka-ui-service
              port:
                number: 8080
